--- a/config/yml/helm_values/core-values/hermes.yml
+++ b/config/yml/helm_values/core-values/hermes.yml
@@ -1,24 +1,23 @@
 image:
   repository: ghcr.io/ixofoundation/ixo-terra-infra/hermes
   pullPolicy: Always
-config:
-  chains:
-    - id: "chainA"
-      rpc_addr: "<path:${vault_mount}/data/hermes#CHAIN_A_RPC_ADDR>"
-      grpc_addr: "<path:${vault_mount}/data/hermes#CHAIN_A_GRPC_ADDR>"
-    - id: "chainB"
-      rpc_addr: "<path:${vault_mount}/data/hermes#CHAIN_B_RPC_ADDR>"
-      grpc_addr: "<path:${vault_mount}/data/hermes#CHAIN_B_GRPC_ADDR>"
-keys:
-  chainA:
-    name: "chainA"
-    secretKey: "<path:${vault_mount}/data/hermes#CHAIN_A_SECRET_KEY>"
-  chainB:
-    name: "chainB"
-    secretKey: "<path:${vault_mount}/data/hermes#CHAIN_B_SECRET_KEY>"
 resources:
   requests:
     memory: 200Mi
     cpu: "50m"
   limits:
     memory: 350Mi
+ingress:
+  enabled: true
+  className: nginx
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-staging
+  tls:
+    - hosts:
+        - ${host}
+      secretName: ixo-hermes-tls
+  hosts:
+    - host: ${host}
+      paths:
+        - path: /
+          pathType: Prefix
