Add cost estimation tools and documentation
- Updated .gitignore to include cost estimation outputs and reports.
- Added cost-estimation-README.md for comprehensive cost estimation guidance.
- Introduced estimate-costs.sh script for running cost estimates.
- Created infracost-usage.yml and infracost.yml for cost estimation configuration.
- Added new directories and files for cost reports and estimates.
- Enhanced locals.tf and main.tf with new variables for storage classes and sizes.
- Updated various helm values files to utilize new storage class variables.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 /.terraform.lock.hcl
 /terraform.tfstate.d/
 credentials.json
+
+# Cost estimation outputs
+cost-estimates/
+cost-reports/
+*-costs.json
+*-costs.txt
+infracost-*.json
