--- a/config/yml/helm_values/chromadb-values.yml
+++ b/config/yml/helm_values/chromadb-values.yml
@@ -8,7 +8,7 @@ chromadb:
   auth:
     enabled: false
   dataVolumeSize: 40Gi
-  dataVolumeStorageClass: 'vultr-block-storage-hdd'
+  dataVolumeStorageClass: ${storage_class}
 
 resources:
   requests:
