--- a/config/yml/helm_values/core-values/ixo-ai-oracles-guru.yml
+++ b/config/yml/helm_values/core-values/ixo-ai-oracles-guru.yml
@@ -109,6 +109,8 @@ env:
     value: "<path:${vault_mount}/data/ixo-ai-oracles-guru#SECP_MNEMONIC>"
   - name: "SUPAMOTO_API_KEY"
     value: "<path:${vault_mount}/data/ixo-ai-oracles-guru#SUPAMOTO_API_KEY>"
+  - name: "PUBLIC_API_KEY"
+    value: "<path:${vault_mount}/data/ixo-ai-oracles-guru#PUBLIC_API_KEY>"
 service:
   port: 3000
 resources:
