--- a/config/yml/helm_values/core-values/ixo-blocksync-core.yml
+++ b/config/yml/helm_values/core-values/ixo-blocksync-core.yml
@@ -32,7 +32,7 @@ env:
   - name: "SENTRYDSN"
     value: ""
   - name: "DATABASE_URL"
-    value: "postgresql://${pgUsername}:${pgPassword}@${pgCluster}-primary.${pgNamespace}.svc.cluster.local/${pgUsername}"
+    value: "<path:${vault_mount}/data/ixo-blocksync-core#DATABASE_URL>"
 resources:
   requests:
     memory: 300Mi
