--- a/modules/argocd/argo-values.yml
+++ b/modules/argocd/argo-values.yml
@@ -128,7 +128,7 @@ controller:
       memory: 1Gi
 server:
   certificate:
-    enabled: true # Note: This must be disabled for INITIAL setup, as cert-manager is installed in Argo-CD so these CRDS do not exist yet.
+    enabled: ${cert_manager_enabled} # Note: This must be disabled for INITIAL setup, as cert-manager is installed in Argo-CD so these CRDS do not exist yet.
     domain: ${host}
     issuer:
       group: cert-manager.io
